<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mianLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.sanmol.weatherapp.Activity.MainActivity">
    <!-- Load the toolbar here -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"></android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/temperature"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="65dp" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@+id/temperature"
                android:background="@drawable/zeronined" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temperature"
                android:hint="@string/description"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="5dp"
                android:hint="@string/date"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/temperatureMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datetime"
                android:layout_marginTop="5dp"
                android:hint="@string/temperature_max"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temperatureMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/datetime"
                android:layout_marginTop="5dp"
                android:hint="@string/temperature_min"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="22dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/headerBottom"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/headerBottom"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">


            <TextView
                android:id="@+id/feelslike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/feelslike"
                android:hint="@string/feels_like_not_available"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:drawableTop="@drawable/precipitation"
                android:hint="@string/clouds_not_available"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableTop="@drawable/pressure"
                android:hint="@string/pressure_not_available"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feelslike"
                android:layout_marginTop="20dp"
                android:drawableTop="@drawable/humidity"
                android:hint="@string/humidity_not_available"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/precipitation"
                android:layout_marginTop="20dp"
                android:drawableTop="@drawable/wind"
                android:hint="@string/wind_not_available"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pressure"
                android:layout_marginTop="20dp"
                android:drawableTop="@drawable/visibility"
                android:hint="@string/visibility_not_available"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15dp"

                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/contentBottom"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/contentBottom"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/sunrise"
                android:hint="@string/sunrise"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableTop="@drawable/sunset"
                android:hint="@string/sunset"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="3">

            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Enter city name" />

            <ImageView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_ok" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_cancel" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progresbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutSearch"
            android:layout_marginTop="50dp"
            android:foregroundGravity="center_horizontal"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progresbar"
            android:layout_marginTop="50dp"
            android:text="Error occured"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>
